styles/styles.css
@font-face {
  font-family: "PT Sans";
  font-style: normal;
  font-weight: 400;
  src: url("../fonts/ptsans-400.woff2") format("woff2");
  font-display: swap;
}

@font-face {
  font-family: "PT Sans";
  font-style: normal;
  font-weight: 700;
  src: url("../fonts/ptsans-700.woff2") format("woff2");
  font-display: swap;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
  margin: 0;
  font-family: "PT Sans", sans-serif;
  font-size: 18px;
  line-height: 21px;
  color: #333333;
  background-color: #f2f2f2;
}

img {
  max-width: 100%;
  height: auto;
  object-fit: contain;
}

/* .visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
} */

/* Header */
.page-header {
  color: #000000;
  background-color: #ffffff;
}

.nav__link {
  font-size: 20px;
  line-height: 24px;
  font-weight: 700;
  text-align: center;
  text-decoration: none;
  text-transform: capitalize;
  color: #000000;
}

.nav__favorites {
  display: inline-block;
  min-width: 20px;
  padding: 5px 4px;
  font-size: 10px;
  line-height: 10px;
  text-align: center;
  color: #ffffff;
  background-color: #7db54f;
  border-radius: 10px;
}

/* Button */
.button {
  font-family: inherit;
  font-size: 16px;
  line-height: 20px;
  font-weight: 700;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  color: #ffffff;
  background-color: #756157;
  border: none;
  border-radius: 4px;
  cursor: pointer;
}

.button--util {
  background-color: #82b3d3;
}

.button--reset {
  background-color: rgba(0, 0, 0, 0);
}

.button--active {
  background-color: #7db54f;
}

/* Index main */
.main-index {
  text-align: center;
  background-color: #ffffff;
}

.main__subhead {
  font-size: 30px;
  line-height: 36px;
  font-weight: 700;
  text-transform: uppercase;
  color: #000000;
}

.main__text {
  font-size: 22px;
  line-height: 26px;
}

/* Hero */
.hero {
  color: #ffffff;
  background-color: #708ea1;
  background-image: url("../images/hero-divider.svg"), url("../images/background-hero.jpg");
  background-size: 100% auto;
  background-position: bottom;
  background-repeat: no-repeat;
}

/* Tile */
.tile {
  background-color: rgba(131, 179, 211, 0.12);
}

.tile--semi-opaque {
  background-color: rgba(131, 179, 211, 0.2);
}

.tile--opaque {
  color: #ffffff;
  background-color: #82b3d3;
}

.tile--middle {
  background-color: #ffffff;
}

.tile__title {
  font-size: 24px;
  line-height: 28px;
  font-weight: 700;
  text-transform: uppercase;
  color: #000000;
}

.tile--opaque .tile__title {
  color: #ffffff;
}

/* Search */
.search__button,
.subscribe__button {
  font-size: 20px;
  line-height: 36px;
}

/* Subscribe */
.subscribe--background {
  color: #ffffff;
  background-color: #708ea1;
  background-image: url("../images/background-subscribe.jpg");
  background-size: 100% auto;
  background-repeat: no-repeat;
}

.subscribe--background .main__subhead {
  color: #ffffff;
}

.subscribe__input {
  font-family: inherit;
  font-size: 18px;
  line-height: 24px;
  color: #000000;
  background-color: #f2f2f2;
}

.subscribe__input::placeholder {
  font-family: inherit;
  font-size: 18px;
  line-height: 24px;
  color: #000000;
  opacity: 0.6;
}

/* Footer */
.page-footer {
  background-color: #ffffff;
}

.page-footer__contacts {
  font-style: normal;
  font-size: 40px;
  line-height: 40px;
  color: #000000;
}

.page-footer__phone {
  text-decoration: none;
  color: #000000;
}

/* Catalog main */
.main-catalog {
  background-color: #ffffff;
}

.main__container {
  color: #ffffff;
  background-color: #708ea1;
  background-image: url("../images/background-filter.jpg");
  background-size: 100% auto;
  background-repeat: no-repeat;
}

.main__title {
  font-size: 60px;
  line-height: 78px;
  font-weight: 700;
}

.main__breadcrumbs-item {
  font-size: 16px;
}

.main__breadcrumbs-link {
  text-decoration: none;
  color: #ffffff;
}

/* Filter */
.filter__form-legend {
  font-size: 20px;
  line-height: 24px;
  font-weight: 700;
}

.filter__form-label {
  line-height: 23px;
}

.filter__form-span {
  line-height: 24px;
  color: #000000;
  opacity: 0.3;
}

.filter__form-input,
.filter__form-input::placeholder {
  font-family: inherit;
  font-size: 18px;
  line-height: 24px;
  font-weight: 700;
  color: #000000;
}

/* Catalog */
.catalog__select {
  font: inherit;
  color: #333333;
}

/* Hotel */
.hotel__link-title {
  text-decoration: none;
}

.hotel__title {
  font-size: 24px;
  line-height: 28px;
  font-weight: 700;
  color: #000000;
}

.hotel__rating {
  font-size: 16px;
  line-height: 20px;
  text-align: center;
  text-transform: uppercase;
  background-color: #f2f2f2;
  border-radius: 4px;
}

/* Pagination */
.catalog__pagination-item,
.catalog__pagination-link {
  font-size: 20px;
  line-height: 36px;
}

.catalog__pagination-link--current {
  color: #000000;
  background-color: #f2f2f2;
}

.catalog__pagination-item--ellipsis {
  font-size: 22px;
  line-height: 26px;
  color: #000000;
}

